syntax = "proto3";
package grpc_consumer;

import "InputStreamShard.proto";

option go_package = "go_video_streamer/internal/grpc_consumer;grpc_consumer";

service VideoRCV {
  rpc StreamFrames(NamedFrame) returns (VideoStreamResponse);
  rpc AddStream(NewStream) returns (EditStreamOperationResponse);
  rpc RMStream(RemoveStream) returns (EditStreamOperationResponse);
}

message VideoStreamResponse {
  uint32 status = 1;
}

message NamedFrame {
  string stream = 1;
  InputStreamShard.StreamShard shard = 2;
}

message NewStream {
  string name = 1;
  float fps = 2;
  uint32 width = 3;
  uint32 height = 4;
  uint32 streamType = 5;
}

message RemoveStream {
  string name = 1;
}

message EditStreamOperationResponse {
  int32 status = 1;
  string message = 2;
}
